# cnncpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: ops.hpp  tensor.hpp
include/cnncpp/: activations.hpp  layers.hpp  network.hpp  ops.hpp  tensor.hpp  utils.hpp
include/cnncpp/layers/: convolution.hpp  layers.hpp  pooling.hpp
runner/: CMakeLists.txt  main.cpp  test_keras_hd5.cpp
src/: convolution.cpp  layers.cpp  network.cpp  ops.cpp  pooling.cpp  utils.cpp
tests/: CMakeLists.txt  convolution_test.cpp  fully_connected_test.cpp  kernel_test.cpp  pooling_test.cpp  ranges_test.cpp  tensor_test.cpp  tests.hpp  utils_test.cpp
